- Added album image and artist names for tracks - Changed the add and remove track buttons to align with the design for the rest of the application - Identified a bug where the user information is not set as there currently is no handling of when fetching a user fails. Added a fixme to handle this.

--- a/src/components/Tracklist/tracklist.module.css
+++ b/src/components/Tracklist/tracklist.module.css
@@ -18,23 +18,22 @@
     flex-shrink: 0; /* Prevents the button from shrinking */
 }
 
-.action-button {
-    color: blue;
-    background-color:hotpink;
-
-    width: 2em;
-    height: 2em;
+.action-button-base {
+    width: 1.5em;
+    height: 1.5em;
     padding: 0;
-
     border: 0.1em solid black;
     border-radius: 50%;
-
     font-size: 1em;
-    font-weight: bolder;
-
-    cursor: pointer;
+    line-height: 1;
 }
 
-.action-button:hover {
-    background-color:greenyellow;
+.action-button-primary {
+    composes: primary from "../../styles/buttons.module.css";
+    composes: action-button-base;
+}
+
+.action-button-secondary {
+    composes: secondary from "../../styles/buttons.module.css";
+    composes: action-button-base;
 }
